# PS1RenderbyCucusina

./: .gitignore  CMakeLists.txt  README.md
Assets/Model/: Coin.mtl
Assets/Shaders/: default.frag  default.vert
include/: Camera.h  EBO.h  Light.h  Mesh.h  ModelLoader.h  Object3D.h  PointLight.h  Texture.h  Transform3D.h  VAO.h  VBO.h  shaderClass.h
include/glad/: glad.h
src/: Camera.cpp  EBO.cpp  Mesh.cpp  Object3D.cpp  PointLight.cpp  Texture.cpp  Transform3D.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
